--- a/250820/CTF-Too-250820-02.md
+++ b/250820/CTF-Too-250820-02.md
@@ -135,7 +135,7 @@
             padding: 5px;
             font-family: inherit;
         }
-    
+      
         .tool-controls input[type="text"], .tool-controls input[type="number"] {
             width: 100px;
         }
@@ -191,7 +191,7 @@
             background-color: var(--button-hover-bg);
             color: var(--button-hover-text);
         }
-    
+      
         .copy-btn.copied {
             background-color: #008000;
             color: white;
@@ -247,7 +247,7 @@
                     </div>
                 </div>
             </div>
-        
+          
             <!-- Hex / ASCII -->
             <div class="tool">
                 <h2>Hex <=> ASCII</h2>
@@ -259,7 +259,7 @@
                     </div>
                 </div>
             </div>
-        
+          
              <!-- XOR Cipher -->
             <div class="tool">
                 <h2>XOR Cipher</h2>
@@ -275,7 +275,7 @@
                     </div>
                 </div>
             </div>
-        
+          
             <!-- Caesar / ROT Cipher -->
             <div class="tool">
                 <h2>ROT Ciphers</h2>
@@ -296,7 +296,7 @@
                     </div>
                 </div>
             </div>
-        
+          
             <!-- JWT Decoder -->
             <div class="tool">
                 <h2>JWT Decoder</h2>
@@ -331,7 +331,7 @@
             const textarea = document.getElementById(elementId);
             textarea.select();
             document.execCommand('copy');
-        
+          
             const btn = textarea.nextElementSibling;
             const originalText = btn.textContent;
             btn.textContent = 'Copied!';
@@ -414,7 +414,7 @@
             const input = hexInput.value.trim();
             const output = document.getElementById('hex-output');
             if (!input) { output.value = ""; return; }
-        
+          
             if (/^[0-9a-fA-F\s]+$/.test(input)) { // Likely Hex
                 try {
                     const cleaned = input.replace(/\s/g, '');
@@ -436,7 +436,7 @@
                 output.value = `ENCODED (Hex):\n${hex}`;
             }
         }));
-    
+      
         // XOR
         const xorInput = document.getElementById('xor-input');
         const xorKey = document.getElementById('xor-key');
@@ -451,7 +451,7 @@
                 const charCode = input.charCodeAt(i) ^ key.charCodeAt(i % key.length);
                 result += String.fromCharCode(charCode);
             }
-        
+          
             // Output as hex for better visibility of non-printable chars
             let hexResult = '';
             for (let i = 0; i < result.length; i++) {
@@ -461,7 +461,7 @@
         });
         xorInput.addEventListener('input', xorHandler);
         xorKey.addEventListener('input', xorHandler);
-    
+      
         // ROT Ciphers
         const caesarInput = document.getElementById('caesar-input');
         const rotType = document.getElementById('rot-type');
@@ -498,7 +498,7 @@
             document.getElementById('caesar-shift-label').style.display = rotType.value === 'caesar' ? 'block' : 'none';
             document.getElementById('caesar-shift').style.display = rotType.value === 'caesar' ? 'block' : 'none';
         });
-    
+      
         // JWT Decoder
         const jwtInput = document.getElementById('jwt-input');
         jwtInput.addEventListener('input', debounce(() => {
@@ -509,7 +509,7 @@
             try {
                 const [header, payload, signature] = input.split('.');
                 if (!header || !payload || !signature) throw new Error("Invalid JWT structure");
-            
+              
                 const decodedHeader = JSON.parse(atob(header.replace(/-/g, '+').replace(/_/g, '/')));
                 const decodedPayload = JSON.parse(atob(payload.replace(/-/g, '+').replace(/_/g, '/')));
 
@@ -555,7 +555,7 @@
         }));
     </script>
 </body>
-</html>```
+</html>
+```
 
 [执行完毕。]
-```
